objects/wkitsm__RequestMenuItem__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__AutoLaunchedFlow__c</fullName>
        <description>Name of the Auto Launched Flow to run after submitting Requesting Menu Item</description>
        <label>Auto Launched Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__CaseTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The case template that this request menu item is mapped to.</description>
        <inlineHelpText>The case template to map to this request menu item.</inlineHelpText>
        <label>Case Template</label>
        <referenceTo>wkitsm__CaseTemplate__c</referenceTo>
        <relationshipLabel>Request Menu Items</relationshipLabel>
        <relationshipName>requestMenuItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wkitsm__ServiceProvider__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>wkitsm__Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__IconUrl__c</fullName>
        <description>The URL of the icon to be used for a request menu item.</description>
        <inlineHelpText>The URL of the icon to be used for a request menu item.</inlineHelpText>
        <label>Icon Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuAssociationCount__c</fullName>
        <label>Menu Association Count</label>
        <summaryForeignKey>wkitsm__RequestMenuAssociation__c.wkitsm__RequestMenuItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestsCount__c</fullName>
        <label>Requests Count</label>
        <summaryForeignKey>wkitsm__RequestMenuSubmission__c.wkitsm__RequestMenuItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>wkitsm__ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>wkitsm__ServiceProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Status__c</fullName>
        <defaultValue>(&quot;Add Additional Fields&quot;)</defaultValue>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item Created</fullName>
                </value>
                <value>
                    <fullName>Add Additional Fields</fullName>
                </value>
                <value>
                    <fullName>Associate with Menu(s)</fullName>
                </value>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wkitsm__Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>wkitsm__Subcategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Version__c</fullName>
        <label>Version</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Request Menu Item</label>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__Description__c</columns>
        <columns>wkitsm__ServiceProvider__c</columns>
        <columns>wkitsm__Category__c</columns>
        <columns>wkitsm__Subcategory__c</columns>
        <columns>wkitsm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>wkitsm__RequestMenuItemPublished</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(wkitsm__CaseTemplate__c),
ISPICKVAL(wkitsm__Status__c, &quot;Published&quot;)
)</errorConditionFormula>
        <errorMessage>Select a case template before you publish the record.</errorMessage>
    </validationRules>
</CustomObject>